[gd_scene load_steps=11 format=2]

[ext_resource path="res://original/sprites/bulletRed1_outline.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Smoke.tscn" type="PackedScene" id=3]
[ext_resource path="res://original/sprites/explosion1.png" type="Texture" id=4]
[ext_resource path="res://original/sprites/explosion2.png" type="Texture" id=5]
[ext_resource path="res://original/sprites/explosion5.png" type="Texture" id=6]
[ext_resource path="res://original/sprites/explosion4.png" type="Texture" id=7]
[ext_resource path="res://original/sprites/explosion3.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.35363
height = 6.93867

[sub_resource type="Animation" id=2]
resource_name = "Explosion"
length = 0.4
step = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Explode:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0251658, 0.0889192, 0.157706, 0.224815, 0.293601 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explode:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.357355 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explode:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[node name="Bullet" type="Area2D" groups=[
"cannon_bullets",
]]
collision_layer = 0
collision_mask = 38
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.044872, -0.493597 )
scale = Vector2( 0.457044, 0.304478 )

[node name="Smoke" parent="." instance=ExtResource( 3 )]

[node name="Explode" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Anime" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bullet_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="_on_Notifier_screen_exited"]
